// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/LoadMore Check snapshots should renders correctly with show < total 1`] = `
<div
  className="consonant-load-more"
  data-testid="consonant-load-more"
>
  <div
    className="consonant-load-more--inner"
  >
    <p
      className="consonant-load-more--text"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<span className=\\"consonant-load-more--shown\\">1</span> of <span className=\\"consonant-load-more--total\\">100</span> displayed",
        }
      }
      data-testid="consonant-load-more--text"
    />
    <button
      className="consonant-load-more--btn"
      onClick={[MockFunction]}
      tabIndex="0"
      type="button"
    >
      Load more
    </button>
  </div>
</div>
`;

exports[`Consonant/LoadMore Check snapshots should renders correctly with show > total 1`] = `
<div
  className="consonant-load-more"
  data-testid="consonant-load-more"
>
  <div
    className="consonant-load-more--inner"
  >
    <p
      className="consonant-load-more--text"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<span className=\\"consonant-load-more--shown\\">100</span> of <span className=\\"consonant-load-more--total\\">1</span> displayed",
        }
      }
      data-testid="consonant-load-more--text"
    />
  </div>
</div>
`;
